--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,16 @@
 # Producer settings
-producer.source=
-producer.subtheme=
+producer.source=${PRODUCER_SOURCE}
+producer.subtheme=${PRODUCER_SUBTHEME}
 ## interval of fetching and sending data in ISO 8601 format
-interval=PT02S
+interval=PT10S
 
 # Kafka general settings
 spring.kafka.bootstrap-servers=${BOOTSTRAP_SERVERS}
 
 # Kafka Producer settings
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
-spring.kafka.producer.value-serializer=dev.hse.template.utils.serialization.RawModelSerializer
+spring.kafka.producer.value-serializer=dev.hse.cmc.utils.serialization.RawModelSerializer
+
+#spring.cloud.openfeign.client.config.cmc.request-interceptors=[dev.hse.cmc.api.AuthorizationInterceptor]
+#spring.cloud
+logging.level.dev.hse.cmc.api.CoinMarketCapClient=DEBUG
