--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,8 +9,10 @@ spring.kafka.bootstrap-servers=${BOOTSTRAP_SERVERS}
 
 # Kafka Producer settings
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
-spring.kafka.producer.value-serializer=dev.hse.cmc.utils.serialization.RawModelSerializer
+spring.kafka.producer.value-serializer=dev.hse.cmc.utils.serialization.CryptoCurrencyDataSerializer
 
 #spring.cloud.openfeign.client.config.cmc.request-interceptors=[dev.hse.cmc.api.AuthorizationInterceptor]
 #spring.cloud
 logging.level.dev.hse.cmc.api.CoinMarketCapClient=DEBUG
+
+CMC_API_KEY=${CMC_API_KEY}
